fixed bug not allowing image to be clickable on mobile

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ nav ul a:hover,
 }
 
 .logo-container {
+    z-index: 1;
     display: flex;
     justify-content: center;
     position: relative;
